Fixing background colour fade on mobile menu

--- a/themes/harassmap/assets/scss/blocks/_header.scss
+++ b/themes/harassmap/assets/scss/blocks/_header.scss
@@ -245,7 +245,7 @@
     }
 
     .dropdown-menu {
-      background-color: $tundora;
+      background-color: transparent;
       border: none;
       float: none;
       position: relative;
